fix[storybook]: Add correct gap between the figure and the content on the text block with media above Card: https://app.clickup.com/t/861m3knxm

--- a/src/styles/globals/_text-block-column.css
+++ b/src/styles/globals/_text-block-column.css
@@ -21,7 +21,7 @@
     justify-content: flex-end;
 }
 
-:is(.text-block[text-block-media-position*="beside"], .text-block[text-block-media-position*="inside"]) .text-block__content {
+:is(.text-block[text-block-media-position*="beside"], .text-block[text-block-media-position*="inside"], .text-block[text-block-media-position="above"]) .text-block__content {
     margin-top: var(--text-block-column-gap);
 }
 
